--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,10 @@ services:
       - ./:/app
     command: >
       sh -c "python3 manage.py wait_for_db &&
+             python3 manage.py makemigrations &&
              python3 manage.py migrate &&
              python3 manage.py loaddata user_data &&
-             python3 manage.py loaddata airport_data $$
+             python3 manage.py loaddata airport_data &&
              python3 manage.py runserver 0.0.0.0:8000"
     env_file:
       - .env
