--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       sh -c "python3 manage.py wait_for_db &&
              python3 manage.py makemigrations &&
              python3 manage.py migrate &&
-             python3 manage.py loaddata user_data &&
-             python3 manage.py loaddata airport_data &&
+             python3 manage.py loaddata fixtures/user_data &&
+             python3 manage.py loaddata fixtures/airport_data &&
              python3 manage.py runserver 0.0.0.0:8000"
     env_file:
       - .env
