--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
              python3 manage.py migrate &&
              python3 manage.py loaddata fixtures/user_data &&
              python3 manage.py loaddata fixtures/airport_data &&
+             python3 manage.py collectstatic --noinput &&
              python3 manage.py runserver 0.0.0.0:8000"
     env_file:
       - .env
