Added API_KEY in env.example

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ POSTGRES_HOST=POSTGRES_HOST
 POSTGRES_DB=POSTGRES_DB
 POSTGRES_USER=POSTGRES_USER
 POSTGRES_PASSWORD=POSTGRES_PASSWORD
+
+API_KEY=38c3ebe8bd6447ad811133507230208
